fix(java): 1.0.9 —— 修失败构建泄漏 mmap、退休队列加宽限期、BenchContract 移出发布物
Java SDK（ip-qzdb-sdk/java）：

- Builder.build() / reload() 的失败路径现在释放刚建立的 mmap 映射。
  此前解析或 CRC 校验失败时直接抛出，MmapSource（及其 Arena）只剩 GC
  可达性这一条释放途径；对"坏文件反复重试加载"的服务（健康检查轮询、
  配置热更新）会持续堆积地址空间，Windows 上还会锁住文件不让替换。
  reload() 的 catch 同时由 QzdbException 放宽到 Throwable ——
  对已 close 的 reader 抛的是 IllegalStateException，走原路径同样漏映射。

- retiring 由"晚一代"单槽改为 2 秒宽限期 FIFO 队列（上限 8）。
  释放靠 ConcurrentLinkedQueue.remove(head) 的原子性保证并发 reload 时
  只有一个线程真正 munmap —— Arena.close() 非幂等，重复关闭必抛
  IllegalStateException。close() 同步排空队列。

- BenchContract 由 src/main/java 移至 src/test/java。
  它此前随 Maven Central 发布包与公开仓源码一起分发（占 qzdb.jar 未压缩
  体积约 26%），属于内部基准工具，不应进入用户可见产物。

- ChainedReader 的 find / findUint / findBytes 合并为单一内核，
  去掉 MERGE 模式下 findUint/findBytes 的格式化往返。
  行为变更：MERGE 下 findBytes 不再把任意 reader 异常重包成 INVALID_IP，
  与 find/findUint 对齐（仅 INVALID_IP 终止，其余跳过该库）。

- QzdbRegistry 隔离队列容量改用 AtomicInteger 计数，
  消除 ConcurrentLinkedQueue.size() 的 O(n) 全遍历。

- pom 升 1.0.9；新增 Automatic-Module-Name: com.qqzeng.qzdb，
  消除 JPMS 下自动模块名由文件名推导的告警。

验证：javac --release 17 -Xlint:all -Werror 在 JDK 21 与 25 上零告警；
mvn test 14 passed / 106 assertions；Tier1 50 passed / 241 assertions；
FailClosed 通过；Tier2 三库 0 偏差（8,680,939 / 8,775,166 / 8,775,166 节点）；
链式差分探针 480 行逐字节一致；映射泄漏实测 10 -> 0（vmmap 计数）。